<resources>
    <string name="app_name">Notes App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="tempDate">23rd March, 2021</string>
    <string name="createNoteText">Go To Create Notes</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="notes">Notes..</string>
    <string name="save_notes">Save Notes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_n_this_note">Are you sure you want to delete\n this Note?</string>
    <string name="yes">Yes</string>
    <string name="notes_app">Notes App</string>
    <string name="make_a_note_of_all_important_stuffs">Make a note of all important stuffs</string>
</resources>