<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="#A8A8A8"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/no_btn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:id="@+id/delete_no"
        android:text="@string/no"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/yes_btn"
        android:textSize="14sp"
        android:id="@+id/delete_yes"
        android:text="@string/yes"/>

</LinearLayout>