<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/notesCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp">

        <View
            android:id="@+id/notesPriority"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/red_dot"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#262625"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notesSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tempText"
                android:textColor="#E6262625"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/notesDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tempDate"
                android:textColor="#262625"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>