<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:id="@+id/createNotes"
    tools:context=".ui.Fragments.CreateNotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_container"
            android:hint="@string/title"
            android:maxLines="1"
            android:textColor="@color/white"
            android:padding="15dp"
            android:textCursorDrawable="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_container"
            android:hint="@string/subtitle"
            android:maxLines="1"
            android:textCursorDrawable="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:textColorHint="@color/white"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pGreen"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/green_dot" />

            <ImageView
                android:id="@+id/pYellow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/yellow_dot" />

            <ImageView
                android:id="@+id/pRed"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/red_dot" />

        </LinearLayout>

        <EditText
            android:id="@+id/editNotes"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/input_container"
            android:gravity="start"
            android:hint="@string/notes"
            android:padding="15dp"
            android:textCursorDrawable="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="15dp"
        app:maxImageSize="32dp"
        app:tint="@android:color/white"
        app:backgroundTintMode="screen"
        android:contentDescription="@string/save_notes"
        android:backgroundTint="@color/red_color"
        android:src="@drawable/ic_baseline_done_24"
        tools:ignore="RtlHardcoded" />

</FrameLayout>